--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.7.0",
+    "pug": "^3.0.2",
     "sass": "^1.66.1"
   }
 }
